--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,14 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(46, 45, 45);
+  box-sizing: border-box;
+  background-color: #222;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 .flex {
   width: 90%;
-  height: 160vh;
-  margin: 0 5%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   gap: 2em;
@@ -20,7 +22,7 @@ header {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 8vh;
+  height: 10vh;
   background-color: black;
   color: #610dff;
   display: flex;
@@ -28,9 +30,12 @@ header {
 }
 header h2 {
   margin-left: 5%;
+  font-size: 2em;
+  font-weight: 600;
 }
 header i {
   margin-right: 5%;
+  cursor: pointer;
 }
 
 /* section = pag-filmes-1 */
@@ -39,43 +44,50 @@ header i {
   text-align: center;
   color: #610dff;
   margin: 3% 0;
-  font: bold 20pt Arial;
+  font-size: 2em;
+  font-weight: 600;
 }
 
 .box-filmes {
   border-radius: 10px;
   width: 23%;
-  height: 45%;
   background-color: black;
   color: #fff;
 }
 
 .box-filmes img {
   width: 100%;
-  height: 68%;
   border-radius: 10px 10px 0 0px;
 }
 .box-filmes h2 {
-  margin-top: 3%;
-  margin-bottom: 3%;
   margin-left: 5%;
-  font: bold 15pt Verdana;
+  font-weight: 600;
 }
 
 .box-filmes p {
   margin-left: 5%;
-  margin-top: 0%;
   display: block;
 }
 .box-filmes button {
-  width: 80%;
+  display: block;
+  margin: 5% auto;
+  width: 90%;
   height: 40px;
-  margin-top: 3%;
-  margin-left: 10%;
 
   background-color: #610dff;
   border-radius: 8px;
   border: none;
   color: #fff;
-  font: normal 15pt Arial;
+  font-size: 1.3em;
+  font-weight: 600;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.box-filmes button:hover {
+    background-color: #610dff99;
+}
+
+.fa-star {
+    color: #610dff;
 }
