--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,62 @@ header h2 {
     color: #610dff;
 }
 
+/*MODAL*/
+
+.modal {
+    width: 100%;
+    height: 100vh;
+    background-color: #00000080;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+.detalhes{
+  width: 60%;
+  padding: 1em;
+  border-radius: 10px;
+  background-color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  position: relative;
+  gap: 2.5em
+}
+.detalhes img{
+  height: 60vh;
+}
+.text-container{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+.title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.title > h2{
+  font-size: 2em;
+
+}
+.minutes{
+
+}
+.star-icon{
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+
 .hide {
   opacity: 0;
   pointer-events: none;
