--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,10 @@ header h2 {
   justify-content: flex-start;
   gap: .5em;
 }
+.texto{
+  text-align: justify;
+  margin-bottom: 1.5em;
+}
 .play-btn, .close-btn {
   background-color: transparent;
   border: none;
