--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -6,7 +6,7 @@
 
 header {
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     background-color: black;
     color: white;
     display: flex;
@@ -22,7 +22,6 @@ header {
     background-color: black;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid white;
     position: fixed;
@@ -31,13 +30,17 @@ header {
     
 
     }
+
+.hdr nav{
+    display: flex;
+    justify-content: space-between;
+    width: 35%!important;
+}
 .hdr nav a{
     
-    text-decoration: underline;
+    text-decoration: none;
     color: white;
-    font-size: 1.5em;
-    margin-right: 80px;
-
+    font-size: 24px;
 }
 .hdr nav a:hover{
     color: gray;
@@ -46,23 +49,35 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 30px;
+    width: 32.5%!important;
+    
 }
 .logoamf img{
     width: 70px;
     height: 70px;
-    margin-right: 50px;
+    margin-left: 30px;
+    margin-right: 20px;   
+}
+.logoamf h1{
+    margin-left: 30px;
+
+}
+.carrinho{
+    width: 32.5%!important;
+    display: flex;
+    flex-direction: row-reverse;
 }
 .carrinho img{
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    margin-right: 30px;
+    cursor: pointer;
 }
 .carrinho a{
     text-decoration: none;
     color: white;
-    font-size: 1.8em;
-    margin-right: 30px;
+    font-size: 24px;
+    
 
 }
 .carrinho a:hover{
@@ -71,12 +86,38 @@ header {
 }
 .imghdr {
     background: black url(img/banner.jpg) center center/cover no-repeat;
-    height: 40vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
+
+/* Principal */
+
 main {
     height: 100vh;
     background-color: gray;
 }
-main .
+.banner-informativo{
+    width: 100%;
+    height: 20vh;
+    margin-top: 10px;
+    background-color: rgb(197, 197, 197);
+    display: flex;
+    flex-direction: row;
+}
+.informativo{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.aling-center-info{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+}
+
