--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -78,12 +78,11 @@ header {
     text-decoration: none;
     color: white;
     font-size: 24px;
-    
 
 }
 
 .imghdr {
-    background: black url(img/banner.jpg) center center/cover no-repeat;
+    background: black url(img/bannerhome.jpg) center center/cover no-repeat;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -93,7 +92,6 @@ header {
 
 main {
     height: 100vh;
-    background-color: gray;
 }
 .banner-informativo{
     width: 100%;
@@ -118,4 +116,51 @@ main {
     align-items: center;
     gap: 15px;
 }
+.contmain{
 
+}
+.contmain h1{
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    margin-top: 30px;
+    font-size: 1.8em;
+}
+/*Footer*/
+footer{
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    height: 40vh;
+    width: 100%;
+}
+.contfoot{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.contimg{
+    display: flex;
+    justify-content: space-evenly;
+    width: 70%;
+    height: 100%;
+}
+.conttxt{
+    display: flex;
+    justify-content: space-evenly;
+    width: 70%;
+    height: 100%;
+}
+.conttxt div{
+    display: flex;
+    flex-direction: column;
+}
+.conttxt a{
+    text-decoration: none;
+    color: white;
+}
+.conttxt a:hover{
+    text-decoration: underline;
+}
