--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -3,7 +3,9 @@
     padding: 0;
 
 }
-
+body{
+    font-family: montserrat,Sans-serif;
+}
 header {
     width: 100%;
     height: 70vh;
@@ -15,26 +17,68 @@ header {
     align-content: center;
     
 }
-.hdr {
-    
-    height: 10vh;
+.top-header{
+    width: 100%;
+    height: 3vh;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    top: 0;
+    background-color: black;
+}
+
+.top{
+    width: 33.33%!important;
+    height: 100%;
+    padding: 2px;
+}
+.text-topheader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+}
+.social{
+    margin: 0 5px;
+}
+
+.hdr {  
+    height: 13vh;
     width: 100%;
     background-color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid rgb(169, 169, 169);
     position: fixed;
-    top:0px
-
-    
-
+    top: 3vh;
     }
 
-.hdr nav{
+/* .hdr nav{
     display: flex;
     justify-content: space-between;
     width: 35%!important;
+} */
+.input-pesquisa{
+    border-radius: 8px;
+    padding: 8px 8px;
+    width: 100%;
+    border: 0;
+}
+.pesquisa{
+    width: 35%!important;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    position: relative;
+}
+.pesquisa .material-icons{
+    display: inline-block;
+    position: absolute;
+    z-index: 999;
+    color: black;
+    right: -15px;
+    
 }
 .hdr nav a{
     
@@ -45,11 +89,31 @@ header {
 .hdr nav a:hover{
     color: gray;
 }
+
+.nav-list{
+    width: 100%;
+    height: 5vh;
+    top:16vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    padding: 3px 0;
+    background-color: black;
+    border-top: 2px solid #888686 ;
+}
+.nav-list a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
 .logoamf{
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 32.5%!important;
+    width: 32.5%!important; 
     
 }
 .logoamf img{
@@ -84,8 +148,43 @@ header {
     text-decoration: underline;
     color: gray;
 }
+
+.aba-carrinho-aberta{
+    margin-top: -6.5vh;
+    position: fixed;
+    height: 100vh;
+    width: 40vw;
+    background-color: #fff;
+    border-radius: 6px 0 0 6px ;
+    overflow: hidden;
+    z-index: 1000;
+    transform: translateX(100%);
+    -webkit-transition: all .4s ease-in-out;
+    -ms-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+ 
+}
+.titulo-carrinho{
+    width: 100%;
+    height: 8vh;
+    border-bottom: 2px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+    font-size: 24px;
+    background-color: rgb(0, 0, 0);
+
+}
+.material-icons{
+    margin-right:25px;
+    cursor: pointer;
+}
+
 .imghdr {
-    background: black url(img/banner.jpg) center center/cover no-repeat;
+    background: rgb(0, 0, 0) url(img/banner.jpg) center center/cover no-repeat;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -95,12 +194,11 @@ header {
 
 main {
     height: 100vh;
-    background-color: gray;
 }
 .banner-informativo{
     width: 100%;
     height: 20vh;
-    margin-top: 10px;
+    margin-top: 3vh;
     background-color: rgb(197, 197, 197);
     display: flex;
     flex-direction: row;
@@ -119,5 +217,6 @@ main {
     flex-direction: row;
     align-items: center;
     gap: 15px;
+    font-size: 13px;
 }
 
