--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -8,8 +8,8 @@ body{
 }
 header {
     width: 100%;
-    height: 70vh;
-    background-color: black;
+    height: 90vh;
+    background-color: rgb(94, 94, 94);
     color: white;
     display: flex;
     flex-direction: column;
@@ -25,6 +25,8 @@ header {
     flex-direction: row;
     top: 0;
     background-color: black;
+    transition: all 0.8s ease-in-out;
+
 }
 
 .top{
@@ -40,8 +42,13 @@ header {
 }
 .social{
     margin: 0 5px;
+    color: #fff;
+    margin-left: 30px;
+    
 }
-
+.sumir{
+    transform: translateY(-100%);
+}
 .hdr {  
     height: 13vh;
     width: 100%;
@@ -52,6 +59,7 @@ header {
     border-bottom: 2px solid rgb(169, 169, 169);
     position: fixed;
     top: 3vh;
+    transition: all 0.8s ease-in-out;
     }
 
 /* .hdr nav{
@@ -99,17 +107,20 @@ header {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
+    position: absolute;
+    z-index: 1;
     padding: 3px 0;
     background-color: black;
     border-top: 2px solid #888686 ;
+    transition: all 0.8s ease-in-out; 
 }
 .nav-list a{
     text-decoration: none;
     color: #fff;
 }
-
-
+.nav-scroll{
+    top: 0;
+}
 .logoamf{
     display: flex;
     flex-direction: row;
@@ -118,7 +129,6 @@ header {
     
 }
 .logoamf img{
-    width: 70px;
     height: 70px;
     margin-left: 30px;
     margin-right: 20px;   
@@ -131,6 +141,7 @@ header {
     width: 32.5%!important;
     display: flex;
     flex-direction: row-reverse;
+    
 }
 .carrinho img{
     width: 30px;
@@ -158,7 +169,7 @@ header {
     background-color: #fff;
     border-radius: 6px 0 0 6px ;
     overflow: hidden;
-    z-index: 1000;
+    z-index: 3;
     transform: translateX(100%);
     -webkit-transition: all .4s ease-in-out;
     -ms-transition: all .4s ease-in-out;
@@ -219,8 +230,80 @@ main {
     font-size: 13px;
 }
 .contmain{
+    width: 100%;
+    height: 70vh;
+    margin-top: 3vh;
+    display:flex;
+    flex-direction: column;
+   
+}
+.titulo-container-categoria{
+    font-size: 30px;
+    text-align: center;
+    margin: 3vh;
+}
+.container-categoria{
+    width: 100%;
+    height: 95vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.categoria{
+    width: 30%;
+    height: 100%;
+    background-color: blue;
+    background-position: center ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: all 8.0s ease;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+.categoria:hover{
+    background-size: 105%;
+}
+.overlay-categoria{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.419);
+    display: flex;
+    flex-direction: column-reverse;
+}
+.overlay-categoria:hover{
+    background-color: rgba(0, 0, 0, 0);
+}
+.titulo-categoria{
+    width: 94%;
+    height: 20%;
+    background-color: rgba(185, 185, 185, 0.486);
+    padding: 3% 3%;
+    font-family: montserrat,Sans-serif;
+    font-style: normal;
+}
+.titulo-categoria p{
+    display: block;
+    margin-bottom: 5%;
+    font-size: 20px;
 
 }
+.false-button-categoria{
+    padding: 3px 20px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 7px;
+    color: rgba(0, 0, 0, 0.682);
+}
+.street{
+    background-image: url("img/streetwear.jpg");
+}
+.street2{
+    background-image: url("img/street2.jpg");
+}
+.vintage{
+    background-image:url("img/vintage.jpg") ;
+}
+
 .contmain h1{
     display: flex;
     justify-content: center;
@@ -266,3 +349,5 @@ footer{
 .conttxt a:hover{
     text-decoration: underline;
 }
+
+/* Java Script  */
