--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -28,12 +28,14 @@ header {
     top: 0;
     background-color: black;
     transition: all 0.8s ease-in-out;
+    z-index: 99;
 }
 
 .top{
     width: 33.33%!important;
     height: 100%;
     padding: 2px;
+    
 }
 .text-topheader{
     display: flex;
@@ -59,6 +61,7 @@ header {
     position: fixed;
     transition: all 0.8s ease-in-out;
     top: 0;
+    z-index: 99;
 }
 
 
@@ -73,8 +76,8 @@ header {
     position: fixed;
     top: 3vh;
     transition: all 0.8s ease-in-out;
-
-    }
+    z-index: 99;
+}
 
 
 .input-pesquisa{
@@ -99,7 +102,6 @@ header {
     
 }
 .hdr nav a{
-    
     text-decoration: none;
     color: white;
     font-size: 24px;
@@ -118,12 +120,12 @@ header {
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    z-index: 1;
+    z-index: 99;
     padding: 3px 0;
     background-color: black;
     border-top: 2px solid #888686 ;
     transition: all 0.8s ease-in-out; 
-
+    font-size: 18px;
     position: fixed;
     padding: 3px 0;
     background-color: black;
@@ -340,25 +342,83 @@ main {
     width: 100%;
     height: 80vh;
     margin-bottom: 3vh;
+    margin-top: 8vh;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
-.text-maisVen{
+.titulo-secao{
     text-align: center;
     font-size: 28px;
     padding: 10px;
-}
-.container-produtos-maisVen{
-    width: 100%;
-    height: 90%;
-    background-color: red;
-}
-.card-produto{
-    height: 80%;
-    width: 90px;
-    background-color: blue;
+    margin-bottom: 2vh;
 }
 
+.container-produtos{
+    width: 100%;
+    height: 70%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #bc1919;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20vh;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    max-height: 272px;
+    object-fit: cover;
+  }
+  .descricao-produto{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    align-items: flex-start;
+  }
+  .produto{
+    margin-left: 10px;
+  }
+
+  .valor{
+    font-size: bold 16px;
+    font-family:sans-serif;
+  }
+  .descricao-produto .btn{
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid black;
+    letter-spacing: 0.8px;
+    cursor: pointer;
+    background-color: #d3d3d3;
+  }
+
+  .secao-acessorios{
+    width: 100%;
+    height: 80vh;
+    margin-bottom: 3vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border-top: 1px solid black;
+}
+
+  .swiper {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .swiper-button-next{
+    color: #000000;
+  }
 
 /*Footer*/
 footer{
