--- a/site AFM/style.css
+++ b/site AFM/style.css
@@ -255,14 +255,14 @@ main {
     height: 100%;
     background-color: blue;
     background-position: center ;
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     transition: all 8.0s ease-in-out;
     transition: opacity .2s;
     cursor: pointer;
 }
 .categoria:hover{
-    background-size: 105%;
+    background-size: 110% 110%;
     
 }
 .overlay-categoria{
@@ -317,6 +317,7 @@ main {
     width: 100%;
     height: 20vh;
     margin-top: 3vh;
+    margin-bottom: 8vh;
     background-color: rgb(197, 197, 197);
     display: flex;
     flex-direction: row;
@@ -346,17 +347,24 @@ main {
     display: flex;
     flex-direction: column;
     position: relative;
+    justify-content: center;
+    align-items: center;
 }
 .titulo-secao{
     text-align: center;
     font-size: 28px;
-    padding: 10px;
+    padding: 15px;
     margin-bottom: 2vh;
+    border-top: 1px solid black;
+    background-color: #888686;
+
 }
 
 .container-produtos{
     width: 100%;
+    max-width: 90vw;
     height: 70%;
+    overflow: hidden;
   }
 
   .swiper-slide {
@@ -388,7 +396,10 @@ main {
   .produto{
     margin-left: 10px;
   }
-
+  .descricao-produto .nome{
+    text-transform: uppercase;
+    font-size: 13px;
+  }
   .valor{
     font-size: bold 16px;
     font-family:sans-serif;
@@ -410,6 +421,8 @@ main {
     flex-direction: column;
     position: relative;
     border-top: 1px solid black;
+    justify-content: center;
+    align-items: center;
 }
 
   .swiper {
@@ -418,7 +431,9 @@ main {
   }
   .swiper-button-next{
     color: #000000;
+    
   }
+
 
 /*Footer*/
 footer{
